# wbParser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
collectors/: data_collector.py  id_collector.py
config/: paths.py  settings.py
core/: browser_api.py  client_api.py  request_api.py
utils/: cookies_fetcher.py  exceptions.py  logger.py  report_manager.py
